Updated about.css and about.js
bios are now cards

--- a/frontend/src/components/About.css
+++ b/frontend/src/components/About.css
@@ -1,7 +1,7 @@
 .profileCard {
     text-align: center;
     margin: auto;
-    box-shadow: 0 4px 4px 0;
+    box-shadow: 0 4px 4px 0 rgb(0,0,0,0.4);
 }
 
 h1, p {
@@ -10,4 +10,16 @@ h1, p {
 
 h1 {
     font-weight: heavy;
+}
+
+.row:after {
+    content:"";
+    display: table;
+    clear: both;
+}
+
+.column {
+    width: 16.66%;
+    float: left;
+    padding-right: 10px;
 }
