--- a/frontend/src/components/About.css
+++ b/frontend/src/components/About.css
@@ -4,12 +4,37 @@
     box-shadow: 0 4px 4px 0 rgb(0,0,0,0.4);
 }
 
-h1, p {
+h2, p {
     font-family: Didot, "Didot LT STD", "Hoefler Text", Garamond, "Times New Roman", serif;
+    margin: auto;
+    margin-left: 3%;
+    margin-right: 3%;
+    color: #797979;
 }
 
-h1 {
-    font-weight: heavy;
+h2 {
+    font-weight: normal;
+    border-bottom: 3px solid #aac5aa;
+    display: inline-block;
+    line-height: 0.8;
+    padding-top: 15px;
+}
+
+p {
+    font-weight: normal;
+    padding-top: 15px;
+}
+
+h3 {
+    font-family: Didot, "Didot LT STD", "Hoefler Text", Garamond, "Times New Roman", serif;
+    margin: auto;
+    color: #797979;
+    padding-top: 15px;
+}
+
+.row {
+    padding-bottom: 15px;
+    padding-top: 15px;
 }
 
 .row:after {
@@ -22,4 +47,14 @@ h1 {
     width: 16.66%;
     float: left;
     padding-right: 10px;
+    margin-left: 4%;
+    margin-right: 4%;
+    margin-bottom: 2%;
+}
+
+ul {
+    font-family: Didot, "Didot LT STD", "Hoefler Text", Garamond, "Times New Roman", serif;
+    margin: auto;
+    margin-left: 3%;
+    margin-right: 3%;
 }
