Edited css of home page

--- a/frontend/src/components/About.css
+++ b/frontend/src/components/About.css
@@ -14,7 +14,7 @@ h2, p {
 
 h2 {
     font-weight: normal;
-    border-bottom: 3px solid #aac5aa;
+    border-bottom: 3px solid #d1dfd1;
     display: inline-block;
     line-height: 0.8;
     padding-top: 15px;
