--- a/frontend/src/components/About.css
+++ b/frontend/src/components/About.css
@@ -57,4 +57,8 @@ ul {
     margin: auto;
     margin-left: 3%;
     margin-right: 3%;
+    list-style-type: none;
+    margin: 0;
+    color: #797979;
+    padding-top: 15px;
 }
